# CLOD-3DGS

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
config/: fov_2.yaml  fov_3.yaml  full.yaml
examples/: vkgs_train.cpp  vkgs_viewer.cc
gsplat/: .gitignore  README.md
gsplat/examples/: simple_trainer.py  simple_trainer_lod.py
gsplat/examples/tools/: convert_pt_to_ply.py  count_gaussians.py  downscale_images.py  gaussians.py  geometry.py  process_gaussians.py  stats_gaussians.py  utils_io.py
include/vkgs/engine/: engine_api.h
include/vkgs/scene/: camera.h  camera_global.h  camera_look_at.h
scripts/: PAPER.md  run_3dgs_vs_mcmc.bat  run_dist_lod_ablations.bat  run_foveation_search.bat
scripts/optimization/: colmap.py  data_loader.py  dataset.py  metrics.py  model.py  process_view_files.py  profile_env.py  render_single_view.py  sampling.py  scene_sampler.py  test_distance_lod.py  test_foveation.py  test_foveation_results.py  test_image_folders.py  test_lod.py  test_videos.py  train.py  trainer.py  view_sampler.py  view_sampler_foveation.py  viz.py
scripts/paper/: plot_budget.py  plot_dist_lod_ablation.py  plot_lod_ablation.py  plot_lod_ablations_images.py  plot_teaser.py
scripts/paper/params/: dist_lod_low.yaml  dist_lod_med.yaml  lod_10.yaml
scripts/video/: images2video.py
src/core/: string.cpp  string.h  structs.cpp  structs.h
src/eye_tracker/: eye_tracker.cpp  eye_tracker.h  eye_tracker_openxr.cpp  eye_tracker_openxr.h
src/foveation/: foveated_layers.cpp  foveated_layers.h  foveated_layers_desktop.cpp  foveated_layers_desktop.h  math.cpp  math.h
src/shader/: color.vert  compositor.frag  compositor.vert  projection.comp  rank.comp  splat.frag  splat.vert
src/vkgs/engine/: config.cpp  config.h  engine.cc  engine.h  engine_api.cpp  gui.cpp  gui.h  sample.cpp  sample.h  splat_load_thread.cc  splat_load_thread.h  view_frustum_dataset.cpp  view_frustum_dataset.h
src/vkgs/engine/utils/: math.cpp  math.h
src/vkgs/engine/vulkan/: attachment.cc  attachment.h  barrier.cpp  barrier.h  benchmark.cpp  benchmark.h  buffer.cc  buffer.h  compositor.cpp  compositor.h  compute_pipeline.cc  compute_pipeline.h  context.cc  context.h  cpu_buffer.cc  cpu_buffer.h  debug.cpp  debug.h  descriptor.cc  descriptor.h  descriptor_layout.cc  descriptor_layout.h  framebuffer.cc  framebuffer.h  graphics_pipeline.cc  graphics_pipeline.h  image_spec.h  pipeline_layout.cc  pipeline_layout.h  recorder.cpp  recorder.h  render_pass.cc  render_pass.h  shader_module.h  structs.h  swapchain.cpp  swapchain.h  swapchain_desktop.cpp  swapchain_desktop.h  swapchain_vr.cpp  (+9 more)
src/vkgs/engine/vulkan/mesh/: axis_mesh.cpp  axis_mesh.h  frustum_mesh.cpp  frustum_mesh.h  grid_mesh.cpp  grid_mesh.h  mesh.cpp  mesh.h
src/vkgs/engine/vulkan/shader/: uniforms.h
src/vkgs/optimization/: vkgs_py.cpp
src/vkgs/scene/: camera.cpp  camera_global.cpp  camera_look_at.cpp
